--- a/notes.org
+++ b/notes.org
@@ -41,11 +41,12 @@ countries that also appear in WVS dataset (after some manual renaming of entries
 Use a method similar to Time Curves
 ** [DONE] Display a scatter plot
 ** [DONE] Connect related samples
-** [TODO] Split connecting lines to sections, one section per year
-** [TODO] Choose different value sets and data sets
+** [DONE] Split connecting lines to sections, one section per year
+** [DONE] Choose different value sets and data sets
 ** [TODO] Label axes properly
 ** [TODO] Color code countries
-** [TODO] Filter countries
+** [DONE] Filter countries
+** [TODO] Hover tooltips
 ** [TODO] Show gapminder trends before and after point
 ** [TODO] Display several graphs as scatter matrix
 ** [TODO] Aggregate sets
