--- a/notes.org
+++ b/notes.org
@@ -24,6 +24,9 @@ For displaying different times, I will use an adaption of Time Curves
 - Time Curves: https://aviz.fr/~bbach/timecurves/#uploadyourdata
 One problem I have is that WVS has at most two points in time. But I would like to explore whether trends are predictive.
 
+Bach B, Shi C, Heulot N, Madhyastha T, Grabowski T, Dragicevic P. Time Curves: Folding Time to Visualize Patterns of Temporal Evolution in Data. IEEE Trans Visual Comput Graphics. 2016 Jan 31;22(1):559–68.
+
+
 *** Data Processing
 Data from WVS was downloaded as R workspaces, and imported into a Pandas Dataframe using appropriate libraries.
 Data about the year in which each country was sample in a wave was taken from website directly. Codings were also taken from the
@@ -34,6 +37,49 @@ only the countries that appear both in wave 5 and wave 6. Of these, I only took 
 the selection to 32 countries.
 As for gap minder, I narrowed the data to countries that appear in all datasets, to years 1999-2020 and finally I only took the 
 countries that also appear in WVS dataset (after some manual renaming of entries), leaving 31 countries.
+
+
+** About text
+
+Global Trust is a work of information visualization which attempts to explore the relations
+between indicators of economic development and the feeling of trust and confidence that people feel in different
+countries overtime.
+
+Created by Yoav Luft for KTH course "Information Visualization", 2020.
+
+Discovery process
+
+In the initial discovery process I wanted to explore the question "Does immigration affects the values of a country".
+I started by exploring both data sets, World Values Survery (WVS) and Gapminder (GM). This initial exploration brought
+up two problems: (A) WVS has a lot of data, so comparing values of two countries will require dimensionality reduction
+of some sort; (B) GM has no data about immigration, only about refugees.
+
+Discovery, Take II
+
+My second attempt at discovery was around the question "What influences the trust people give in each other and in
+public entities?". To answer that question, I've explored WVS dataset and found 6 questions regarding trust and 12
+questions regarding confidence in organizations. I've decided to look at the following possible influences: economic
+issues, violence and corruption. I found 5 GM datasets that are relevant.
+
+Next, I explored the datasets using Pandas, and plot several relationships. I've also considered the question of
+temporality: WVS data is divided to 4 year waves, while GM is annual. Fig 1. shows exploration of the impact of
+aggregating GM time series to chunks corresponding to waves.
+
+After some research, I decided to approach the question of displaying temporal relationships by using a method inspired
+by Time-Curves [Bach et al. 2015]. But in my case I had to deal with holes in the data: For every country and WVS
+question, I had only two points of data, but for GM I had many. I decided to interpolate the data between points for
+which there is both WVS and GM data, and extrapolate based on GM for years outside WVS samples. Fig. 2 and 3 shows
+explorations of displaying data from two dimensions + time, and for using time-curves inspired design.
+
+Learnings
+
+I can divide my learnings into several aspects: Technically, I've learned to use elm-visualization, and I'm more strongly
+convinced now that Elm is the best thing for the web, ever, although it is still young and not as feature rich as other
+frameworks. On the visualization side, I had explored several ideas for connecting multi-dimensional data and time,
+but I would have liked to explore more. On the data side, I did not come into any conclusions. There seems to be, for
+example, some relation between corruption and lack of trust, but corruption didn't seem to influence confidence in the
+government. If I had the time, I would have wanted to explore more relationships, maybe through scatter-plot matrices,
+or user defined aggregations.
 
 
 * Tasks
